test/src/e2e_vm_tests/test_programs/should_pass/trait_map_use_indirect_impl/src/foobar.sw
library;

pub struct StorageFoobar {}

impl StorageKey<StorageFoobar> {
    pub fn foobar(self) {
        log("foobar");
    }
}