test/src/e2e_vm_tests/test_programs/should_fail/trait_coherence/impl_self_overlap_lib/src/lib.sw
library;

pub struct MyType {}

impl MyType {
    fn do_something(self) {
    }
}


